TFP-6405: WIP Slår sammen til ett aksjonspunkt * Sletter felles kode * Tilrettelegger for toggle